2001-07-30  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/glade/sched-xact.glade: Added seperate reminders
	dialog from since-last-run dialog.  Removed reminders
	frame/section from since-last-run dialog.  Added alternative SX
	Editor UI [not presently used].

	* src/gnome/dialog-sxsincelast.c: Changes for
	reminders-as-seperate-dialog; selected reminders then update
	since-last-run dialog [whether it's open or not]; the dialogs
	[mostly] deal with their closing conditions correctly.  Support
	for ad-hoc variables in template-transaction-split formulas.

	* src/engine/gnc-schedxaction-xml-v2.c
	(gnc_schedXaction_end_handler): Added support for restoring
	in-development pre-template-account-stored-in-SX change.
	(tt_act_handler): Added support for restoring in-devel pre-CIT
	.gml2/XMLv2 files.

	* src/gnc-exp-parser.c (gnc_exp_parser_parse_seperate_vars): Added
	for Scheduled-Transaction-related since-last-run/split-formula
	parsing.

	* src/gnome/dialog-sxsincelast.c: Added support for variable entry
	before creation/formulas in template transactions.

2001-07-28  Robert Graham Merkel  <rgmerk@mira.net>

	* src/engine/SchedXaction.{ch}: Store template account in the
	SchedXaction structure, get rid of splitlist from structure.
	
	* src/engine/gnc-schedxaction-xml-v2.c: replaced tag literals
	with #define'd constants.
	(gnc_schedXaction_dom_tree_create, sx_templ_act_handler): added
	code for saving/restoring template account ID.

	* doc/sgml/C/xacc-sxeditor.sgml: new file.

2001-07-27  James LewisMoss  <jimdres@mindspring.com>

	* src/engine/gnc-schedxaction-xml-v2.c: remove include of removed
	file. 

	* src/engine/gnc-freqspec-xml-v2.c: remove include of removed
	file. 

	* src/engine/gnc-pricedb-xml-v1.c: remove include of
	sixtp-writers.h and remove func xml_add_gnc_pricedb (no longer
	used anywhere)
	(gnc_pricedb_parser_new): reorder functions.
	remove include of removed file.

	* src/engine/io-gncxml-v1.c: move v1 kvp parser code to this
	file. 
